# eo-bias

./: .gitignore  README.md  pyproject.toml
configs/: models.yaml  regions.yaml  sampling.yaml
scripts/: 01_sample_labels.py  02_export_chips.py  03_extract_embeddings.py  04_run_probes.py  05_finetune.py  06_make_figures.py  _smoke_ee.py  _smoke_export_one.py  _smoke_olmoearth.py  _smoke_we_mask.py
src/geo_bias/: __init__.py  cli.py
src/geo_bias/eval/: __init__.py  embed.py  finetune.py  metrics.py  probe.py  viz.py
src/geo_bias/models/: __init__.py  base.py  olmoearth.py  registry.py
src/geo_bias/utils/: __init__.py  geo.py  logging.py  seeds.py
