# pyproject.toml
# Cross-region benchmark for geographical bias in EO foundation models.
# Managed with `uv` (https://docs.astral.sh/uv/). Python 3.12 only.
#
# Quickstart:
#   uv venv --python 3.12
#   uv sync --extra dev
#   source .venv/bin/activate
#
# OlmoEarth is NOT pinned as a hard dependency — its own lockfile conflicts
# with downstream projects if you mix them. Install it separately, AFTER
# the main env is built. Two options, in order of preference:
#
#   (1) Sibling clone + editable install (recommended; lets you read the code):
#         git clone https://github.com/allenai/olmoearth_pretrain.git ../olmoearth_pretrain
#         uv pip install -e ../olmoearth_pretrain
#
#   (2) Direct from GitHub (faster but harder to debug):
#         uv pip install "olmoearth-pretrain @ git+https://github.com/allenai/olmoearth_pretrain.git"
#
# If (1) or (2) produces resolver conflicts, fall back to a separate venv for
# OlmoEarth inference and serialize embeddings to disk between steps.

[project]
name = "geo-bias"
version = "0.1.0"
description = "Cross-region benchmark for geographical bias in Earth observation foundation models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.edu" },
]
keywords = ["earth-observation", "foundation-models", "bias", "benchmark", "geospatial"]

dependencies = [
    # --- Core ML ---
    "torch>=2.5,<3.0",
    "torchvision>=0.20,<1.0",

    # --- Numerics, dataframes, IO ---
    "numpy>=2.1,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<2.0",
    "pyarrow>=17.0",          # Parquet manifests

    # --- Geospatial stack ---
    # NOTE: rasterio / geopandas wheels bundle GDAL on Linux+macOS+Windows
    # for Python 3.12 in current versions, so no system GDAL needed.
    "earthengine-api>=1.4",
    "rasterio>=1.4,<2.0",
    "rioxarray>=0.17",
    "geopandas>=1.0,<2.0",
    "shapely>=2.0,<3.0",
    "pyproj>=3.7,<4.0",
    "fiona>=1.10",            # vector IO under geopandas
    "xarray>=2024.10",

    # --- Config & utilities ---
    "pydantic>=2.8,<3.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "click>=8.1",             # script entry points
    "rich>=13.9",             # nicer logging / progress

    # --- Visualization ---
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13",
    "contextily>=1.6",        # basemaps for choropleths
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.3",
    "types-PyYAML",
    "pandas-stubs",
]

# Optional: install only when you actually need to fine-tune.
# Keeps the base env lean for embedding-only work on smaller machines.
finetune = [
    "lightning>=2.4,<3.0",
    "wandb>=0.18",
    "torchmetrics>=1.5",
]

# Optional: extra foundation models for the multi-model extension (§7.2 of CLAUDE.md).
# Install lazily once the OlmoEarth-only pipeline produces a clean heatmap.
extras-models = [
    "timm>=1.0",
    "transformers>=4.45",
    "huggingface-hub>=0.26",
]

[project.scripts]
geo-bias = "geo_bias.cli:main"

# ---------------------------------------------------------------------------
# Build backend (needed for editable install of the local package)
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_bias"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------

[tool.uv]
# Pin the resolver so behavior is reproducible across machines.
resolution = "highest"
# If you choose option (1) above, uncomment the next block to make the
# sibling clone an automatic editable dep. Path is relative to this file.
# [tool.uv.sources]
# olmoearth-pretrain = { path = "../olmoearth_pretrain", editable = true }

# ---------------------------------------------------------------------------
# Linting / formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PD",  # pandas-vet
    "NPY", # numpy
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # handled by formatter
    "B008",  # FastAPI / click default-arg patterns are fine
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]      # late imports OK in scripts
"notebooks/*" = ["ALL"]     # notebooks are exploratory
"tests/*" = ["S101"]        # asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ee.*",
    "geopandas.*",
    "rasterio.*",
    "rioxarray.*",
    "shapely.*",
    "fiona.*",
    "contextily.*",
    "olmoearth_pretrain.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=geo_bias",
    "--cov-report=term-missing",
]
markers = [
    "slow: tests that take more than ~5s",
    "ee: tests that need Earth Engine auth (skipped in CI)",
    "gpu: tests that need a CUDA device",
]

[tool.coverage.run]
branch = true
source = ["src/geo_bias"]
omit = ["*/tests/*", "*/notebooks/*"]
